--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -4,7 +4,7 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY package.json .
-RUN yarn install
+RUN yarn install --production=true
 
 COPY . .
 
