--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "filterbot",
   "scripts": {
     "start": "node index",
-    "start.dev": "nodemon"
+    "dev": "nodemon"
   },
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.0"
+    "dotenv": "^8.0.0"
   },
   "devDependencies": {}
 }
