--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     volumes:
-      - ./:/usr/src/app
-      - node_modules
+      - "./:/usr/src/app:rw"
+      - /usr/src/app/node_modules
     ports:
       - "3000:3000"
